kubernetes/apps/inference/ollama/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ollama
  ports:
    - name: http
      port: 11434
      targetPort: http
