kubernetes/apps/inference/ollama/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  namespace: inference
  annotations:
    traefik.ingress.kubernetes.io/service.serversTransport: inference-ollama-transport@kubernetescrd
spec:
  ingressClassName: ingress-traefik
  rules:
    - host: &host ollama.techvomit.xyz
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: ollama
                port:
                  number: 11434
            path: /
  tls:
    - hosts:
        - *host
      secretName: techvomit-xyz-production-tls
